--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "concurrently \"php artisan serve\" \"vite\"",
         "build": "vite build"
     },
     "devDependencies": {
@@ -10,9 +10,16 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
+        "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^2.1.8",
+        "jquery": "^3.7.1",
+        "quill": "^2.0.2",
+        "toastr": "^2.1.4"
     }
 }
